Correctly applies CSS Fixes the height of toolbar and scroll on mobile.

--- a/less/adapt-sideView.less
+++ b/less/adapt-sideView.less
@@ -17,15 +17,14 @@
 
   .sideview-controls-close-button {
     position: absolute;
-    width: 60px;
+    width: 64px;
+    height: 64px;
     color: @navigation-icon-color;
     background-color: transparent;
-    .no-box-shadow;
 
     &:hover {
       background-color: transparent;
       color: @navigation-icon-color-hover;
-      .no-box-shadow;
     }
   }
 
@@ -54,7 +53,7 @@
     color: @navigation-icon-color;
     font-family: @font-family;
     left: 42%;
-    top: 17px;
+    top: 20px;
   }
 
   .sideview-iframe-holder {
@@ -134,7 +133,7 @@
     &.open {
       left: 0;
       position: fixed;
-      overflow-y: scroll;
+      overflow: hidden;
     }
   }
 
